--- a/calc_gui/Cargo.toml
+++ b/calc_gui/Cargo.toml
@@ -24,4 +24,6 @@ whoami = "1.5"
 # Native-only dependencies
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-# WASM-only dependencies
+# WASM-only dependencies - for better error reporting
+console_error_panic_hook = "0.1"
+wasm-bindgen = "0.2"
