--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ calc_gui/*.wasm.map
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# bv (beads viewer) local config and caches
+.bv/
